--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imagenes/titulo/ensaladas.jpg" class="d-block w-100 "  alt=" imagen de platos y cubiertos">
+      <img src="imagenes/titulo/ensaladas.JPG" class="d-block w-100 "  alt=" imagen de platos y cubiertos">
       <div class="carousel-caption d-none d-md-block">
         <h5>La Comarca</h5>
         <p>comida deliciosa para la familia y amigos</p>
