--- a/bebidas.html
+++ b/bebidas.html
@@ -57,7 +57,7 @@
 	<li>Quilmes  1L<span class="letra_negrita"> $390</span></li>
 	<li>Brahma<span class="letra_negrita"> $390</span></li>
 </ul>
-<img class="imagenes_carta" src="imagenes/bebidas/cervezas.JPG" alt=" foto de distintos tipos de Cervezas">
+<img class="imagenes_carta" src="imagenes/bebidas/cervezas.jpg" alt=" foto de distintos tipos de Cervezas">
 </article>
 <!--fin de cervezas -->
 
