--- a/entrada.html
+++ b/entrada.html
@@ -32,7 +32,7 @@
    
 	<!--Empanada-->
 <article class="retoque">
-      <img class="imagenes_carta" src="imagenes/entrada/empanadas.JPG" alt="habia un plato con empanadas">
+      <img class="imagenes_carta" src="imagenes/entrada/empanadas.jpg" alt="habia un plato con empanadas">
       <h3 class="titulos_carta_isquierda"> Empanadas:</h3>
       <p class="reseta_isquierda">carne,jamon y queso,<span class="punto_aparte">pollo,verdura.</span><span class="punto_aparte"><span class="letra_negrita">x1 $130 x3 $330</span> </span></p>
 </article>
@@ -42,13 +42,13 @@
 <article class="detalle ">
       <h3 class="titulos_carta"> Ensaladas:</h3>
       <p class="reseta" >Ensalada poke de atún y algas con aguacate,<span class="punto_aparte">Panzanella italiana</span><span class="punto_aparte">Ensalada caprese de pasta </span><span class="punto_aparte"><span class="letra_negrita">$250</span></span></p>
-      <img class="imagenes_carta" src="imagenes/entrada/ensaladas.JPG" alt="habia barios tipos de ensaladas">
+      <img class="imagenes_carta" src="imagenes/entrada/ensaladas.jpg" alt="habia barios tipos de ensaladas">
 </article >
       <!--fin de ensaladas-->
    
       <!--Papas-->
 <article class="retoque">
-      <img class="imagenes_carta" src="imagenes/entrada/papas.JPG" alt="habia un plato de papas ruisticas con una salsa">
+      <img class="imagenes_carta" src="imagenes/entrada/papas.jpg" alt="habia un plato de papas ruisticas con una salsa">
       <h3 class="titulos_carta_isquierda">Papas:</h3>
       <p class="reseta_isquierda"> Papas rustica con chedar y jamon<span class="punto_aparte">Papas rustica con cuatro quesos </span><span class="punto_aparte"><span class="letra_negrita">$350</span></span></p>
 </article>
@@ -58,7 +58,7 @@
 <article class="detalle">
       <h3 class="titulos_carta">Picada:</h3>
       <p class="reseta">aseitunas,jamon crudo, queso,<span class="punto_aparte">salame ,jamon cosido y atun </span><span class="punto_aparte"><span class="letra_negrita"> $950</span></span></p>
-      <img class="imagenes_carta" src="imagenes/entrada/picadas.JPG" alt="habia un tabla de picada">
+      <img class="imagenes_carta" src="imagenes/entrada/picadas.jpg" alt="habia un tabla de picada">
 </article>
       <!--fin de picada-->
 <footer>
