arreglando las imagenes

--- a/pastas.html
+++ b/pastas.html
@@ -29,7 +29,7 @@
 
 		<!--empieza los Ñoquis -->
 <article class="retoque">
-	<img class="imagenes_carta" src="imagenes/pastas/nioquis.PNG" alt="habria una imagen de un plato de ñoquis">
+	<img class="imagenes_carta" src="imagenes/pastas/nioquis.png" alt="habria una imagen de un plato de ñoquis">
 	<h3 class="titulos_carta_isquierda" >Ñoquis:</h3>
 	<p class="reseta_isquierda">Ñoquis de papas,<span class="punto_aparte">adobados en aseite de oliba </span><span class="punto_aparte">y oregano.</span><span class="punto_aparte">Salsa sugerida:Bolognesa</span> <span class="punto_aparte"><span class="letra_negrita"> $350</span></span></p>
 </article>
@@ -40,13 +40,13 @@
 
 	<h3 class="titulos_carta" >Ravioles de verdura: </h3>
 	<p class="reseta">Rellenso de espinaca,<span class="punto_aparte">cebolla saltada,</span><span class="punto_aparte">ricota, queso parmesano y nuez.</span><span class="punto_aparte">Salsa sugerida:Roja </span><span class="punto_aparte"><span class="letra_negrita">$400</span></span></p>
-	<img class="imagenes_carta" src="imagenes/pastas/ravioles.JPG" alt="habria una imagen de un plato de Ravioles">
+	<img class="imagenes_carta" src="imagenes/pastas/ravioles.jpg" alt="habria una imagen de un plato de Ravioles">
 </article>
      	<!-- terminan ravioles-->
 
      	<!--empiezan sorrentinos -->
 <article class="retoque">
-	<img class="imagenes_carta" src="imagenes/pastas/sorrentinos.JPG" alt="habria una imagen de un plato de Sorrentinos">
+	<img class="imagenes_carta" src="imagenes/pastas/sorrentinos.jpg" alt="habria una imagen de un plato de Sorrentinos">
 	<h3 class="titulos_carta_isquierda">Sorrentinos de Jamos y Quesos :</h3>
 	<p class="reseta_isquierda">Rellenos de jamon cosido,<span class="punto_aparte">mix de queos (mozarella,parmesano y ricota fresca)</span><span class="punto_aparte">Salsa sugerida:Crema </span><span class="punto_aparte"><span class="letra_negrita">$400</span></span></p>
 </article>
