--- a/pizza.html
+++ b/pizza.html
@@ -29,7 +29,7 @@
 <section>
 <!--empieza la pizza fugazeta -->
 <article class="retoque">
-		<img class="imagenes_carta"  src="imagenes/pizza/fugazeta.JPG" alt="habria una imagen de una pizza Fugazeta">
+		<img class="imagenes_carta"  src="imagenes/pizza/fugazeta.jpg" alt="habria una imagen de una pizza Fugazeta">
 		<h3 class="titulos_carta_isquierda"> Fugazeta</h3>
 		<p class="reseta_isquierda">Mozzarella y cebolla,<span class="punto_aparte">aceitunas verdes </span><span class="punto_aparte"><span class="letra_negrita">Grande $500 (1/2 $250)<span class="punto_aparte">Pequeña $340</span> </span></span></p>
 </article>
@@ -41,7 +41,7 @@
 <article class="detalle ">
 		<h3 class="titulos_carta"> De Hongos</h3>
 		<p class="reseta">Salsa de tomate, Mozzarella,<span class="punto_aparte">champiñones sasonados con</span><span class="punto_aparte">pimienta negra y especias</span><span class="punto_aparte"><span class="letra_negrita">Grande $600 (1/2 $300)<span class="punto_aparte">Pequeña $400 </span></span></span></p>
-		<img class="imagenes_carta" src="imagenes/pizza/hongo.JPG" alt="habria una imagen de una pizza de Hongos">
+		<img class="imagenes_carta" src="imagenes/pizza/hongo.jpg" alt="habria una imagen de una pizza de Hongos">
 		
 </article>
 
@@ -51,7 +51,7 @@
 
 <!--empieza la pizza espicial -->
 <article class="retoque">
-	<img class="imagenes_carta" src="imagenes/pizza/especial.PNG" alt="habria una imagen de una pizza Especias">
+	<img class="imagenes_carta" src="imagenes/pizza/especial.png" alt="habria una imagen de una pizza Especias">
 		<h3 class="titulos_carta_isquierda">Especial</h3>
 		<p class="reseta_isquierda">Salsa de tomate,Mozzarella,<span class="punto_aparte">morrones,jamon cocido y </span><span class="punto_aparte">aceitunas verde</span><span class="punto_aparte"><span class="letra_negrita">Grande $500(1/2 $250)<span class="punto_aparte">Pequeña $340</span></span></span></p>
 		
@@ -64,7 +64,7 @@
 <article class="detalle ">
 		<h3 class="titulos_carta">Napolitana</h3>
 		<p class="reseta">Salsa de tomate, mozzarella,<span class="punto_aparte">tomate, ajo y oregano</span><span class="punto_aparte"><span class="letra_negrita">Grande $600 (1/2 $300)<span class="punto_aparte">Pequeña $400 </span></span></span></p>
-		<img class="imagenes_carta" src="imagenes/pizza/napolitana.JPG" alt="habria una imagen de una pizza Napolitana">
+		<img class="imagenes_carta" src="imagenes/pizza/napolitana.jpg" alt="habria una imagen de una pizza Napolitana">
 </article>
 
 <!--termina la pizza napolitana-->
