arreglando las imágenes

--- a/postres.html
+++ b/postres.html
@@ -27,23 +27,23 @@
 <section >
 <h1 id="fondo_PO">Postres</h1>
 <article class="retoque">
-	<img class="imagenes_carta" src="imagenes/postres/browniecon oreo.JPG">
+	<img class="imagenes_carta" src="imagenes/postres/browniecon oreo.jpg">
 	<p class="reseta_isquierda">browniecon oreo <span class="letra_negrita">$290</span></p>
 </article>
 
 <article class="detalle ">
 	<p class="reseta">Chocotrorta<span class="letra_negrita">$290</span></p>
-	<img class="imagenes_carta" src="imagenes/postres/chocotorta.JPG">
+	<img class="imagenes_carta" src="imagenes/postres/chocotorta.jpg">
 </article>
 
 <article class="retoque">
-	<img class="imagenes_carta" src="imagenes/postres/Helado-con-crumble-de-manzana.JPG">
+	<img class="imagenes_carta" src="imagenes/postres/Helado-con-crumble-de-manzana.jpg">
 	<p class="reseta_isquierda">Helado con crumble de manzana <span class="letra_negrita">$290</span></p>
 </article>
 
 <article class="detalle ">
 	<p class="reseta">mousse chocolate <span class="letra_negrita">$290</span></p>
-	<img class="imagenes_carta" src="imagenes/postres/mousse chocolate.JPG">
+	<img class="imagenes_carta" src="imagenes/postres/mousse chocolate.jpg">
 </article>
 	
 	
