--- a/pizza.html
+++ b/pizza.html
@@ -66,6 +66,11 @@
 		<p class="reseta">Salsa de tomate, mozzarella,<span class="punto_aparte">tomate, ajo y oregano</span><span class="punto_aparte"><span class="letra_negrita">Grande $600 (1/2 $300)<span class="punto_aparte">Pequeña $400 </span></span></span></p>
 		<img class="imagenes_carta" src="imagenes/pizza/napolitana.jpg" alt="habria una imagen de una pizza Napolitana">
 </article>
+<article class="retoque">
+	<img class="imagenes_carta" src="imagenes/pizza/hawaiana.jpg">
+	<h3 class="titulos_carta_isquierda">Hawaiana</h3>
+	<p class="reseta_isquierda">piñas, Mozzarella, jamón,<span class="punto_aparte">aceitunas y oregano</span><span class="punto_aparte"><span class="letra_negrita">grade $580 (1/2 $260)<span class="punto_aparte">pequeña $380</span></span></span></p>
+</article>
 
 <!--termina la pizza napolitana-->
 </section>
